@@ -1,4 +1,7 @@
 2002-09-12  Christian Ruppert <arc@gmx.li>
+	* uwm/special.c: corrected default for CPPcall to "cpp" (quotes missing)
+	* uwm/special.c: changed #include "time.h" to #include <time.h>
+2002-09-12  Christian Ruppert <arc@gmx.li>
 	* uwm/Makefile.am: added uwm/tree.c to the list .c-files and uwm/tree.h
 	  to the list of non installed headers.
 	* uwm/tree.c, uwm/tree.h: added a simple module to create and search in
